Provide endpoint for retrieving sensor data for a client

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,7 +14,7 @@ mqtt:
   client:
     id: mqtt-data-hub-dev
   topic:
-    sensor-data: dev/+/+/+/sensor-data
+    sensor-data: +/+/+/sensor-data
 
 logging:
   level:
