--- a/main_esp/main/idf_component.yml
+++ b/main_esp/main/idf_component.yml
@@ -7,3 +7,5 @@ dependencies:
     version: "~2"
     rules:
       - if: "target in [esp32p4, esp32h2]"
+  espressif/led_strip:
+    version: "^3.0.0"
