PWA and mobile app test

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,15 @@ dependencies.lock
 
 # PostgreSQL
 postgres/
+# Node.js
+node_modules/
+dist/
+.env
+.env.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Expo
+.expo/
+web-build/
