Integrate ESP32 with AWS IoT Core

--- a/main_esp/main/CMakeLists.txt
+++ b/main_esp/main/CMakeLists.txt
@@ -16,3 +16,7 @@ idf_component_register(SRCS "latest_sensor_data.cpp" "person_counter.cpp" "bmp28
                     REQUIRES esp_driver_gpio esp_driver_rmt esp_driver_gptimer led_strip esp_driver_i2c esp_http_server esp_https_ota
                     PRIV_REQUIRES esp_wifi nvs_flash esp_netif esp_timer bt mqtt esp_pm json esp_adc app_update
                     INCLUDE_DIRS ".")
+
+target_add_binary_data(${COMPONENT_TARGET} "certs/AmazonRootCA1.pem" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "certs/certificate.pem.crt" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "certs/private.pem.key" TEXT)
